--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="">Praise Amarachi Mark</a>.
+      Coded by <a href="https://github.com/MarkPraise/QR-code-Component" target="_blank">Praise Amarachi Mark</a>.
     </div>
   </section>
 
